@@ -553,23 +553,11 @@ return array(
 				'length' => 10,
 				'default' => '0',
 			),
-			'snmpv3_authprotocol' => array(
-				'null' => false,
-				'type' => DB::FIELD_TYPE_INT,
-				'length' => 10,
-				'default' => '0'
-			),
 			'snmpv3_authpassphrase' => array(
 				'null' => false,
 				'type' => DB::FIELD_TYPE_CHAR,
 				'length' => 64,
 				'default' => '',
-			),
-			'snmpv3_privprotocol' => array(
-				'null' => false,
-				'type' => DB::FIELD_TYPE_INT,
-				'length' => 10,
-				'default' => '0'
 			),
 			'snmpv3_privpassphrase' => array(
 				'null' => false,
@@ -578,6 +566,18 @@ return array(
 				'default' => '',
 			),
 			'uniq' => array(
+				'null' => false,
+				'type' => DB::FIELD_TYPE_INT,
+				'length' => 10,
+				'default' => '0',
+			),
+			'snmpv3_authprotocol' => array(
+				'null' => false,
+				'type' => DB::FIELD_TYPE_INT,
+				'length' => 10,
+				'default' => '0',
+			),
+			'snmpv3_privprotocol' => array(
 				'null' => false,
 				'type' => DB::FIELD_TYPE_INT,
 				'length' => 10,
@@ -704,6 +704,12 @@ return array(
 				'type' => DB::FIELD_TYPE_CHAR,
 				'length' => 255,
 				'default' => '',
+			),
+			'retries' => array(
+				'null' => false,
+				'type' => DB::FIELD_TYPE_INT,
+				'length' => 10,
+				'default' => '1',
 			),
 		),
 	),
@@ -969,23 +975,11 @@ return array(
 				'length' => 10,
 				'default' => '0',
 			),
-			'snmpv3_authprotocol' => array(
-				'null' => false,
-				'type' => DB::FIELD_TYPE_INT,
-				'length' => 10,
-				'default' => '0'
-			),
 			'snmpv3_authpassphrase' => array(
 				'null' => false,
 				'type' => DB::FIELD_TYPE_CHAR,
 				'length' => 64,
 				'default' => '',
-			),
-			'snmpv3_privprotocol' => array(
-				'null' => false,
-				'type' => DB::FIELD_TYPE_INT,
-				'length' => 10,
-				'default' => '0'
 			),
 			'snmpv3_privpassphrase' => array(
 				'null' => false,
@@ -1136,6 +1130,18 @@ return array(
 				'type' => DB::FIELD_TYPE_CHAR,
 				'length' => 64,
 				'default' => '30',
+			),
+			'snmpv3_authprotocol' => array(
+				'null' => false,
+				'type' => DB::FIELD_TYPE_INT,
+				'length' => 10,
+				'default' => '0',
+			),
+			'snmpv3_privprotocol' => array(
+				'null' => false,
+				'type' => DB::FIELD_TYPE_INT,
+				'length' => 10,
+				'default' => '0',
 			),
 		),
 	),
